# LDAdam

./: .gitignore  README.md  install.sh  pyproject.toml  setup.cfg  setup.py
experiments/c4_pretraining/: c4_requirements.txt  run_llama_pretraining.py
experiments/c4_pretraining/configs/: llama_3b.json  llama_60m.json
experiments/c4_pretraining/pept_utils/: args_utils.py  training_utils.py
experiments/c4_pretraining/scripts/: run_llama_pretraining_Adam.sh  run_llama_pretraining_LDAdam.sh  run_llama_pretraining_LDAdam_noEF.sh
experiments/glue_finetuning/: glue_requirements.txt  run_glue_no_trainer_HF.py  run_superglue_no_trainer_HF.py
experiments/glue_finetuning/scripts/: run_glue_no_trainer_Adam.sh  run_glue_no_trainer_LDAdam.sh  run_glue_no_trainer_LDAdam_noEF.sh
ldadamw_torch/: README.md  __init__.py  ldadamw.py  projector.py
